Implementacion de campo telefono en registro y carga automatica del campo en reservas
