# Back/app/Models/User.php
@@ -22,6 +22,7 @@ class User extends Authenticatable implements JWTSubject{
     protected $fillable = [
         'name',
         'email',
+        'telefono',
         'password',
         'role',
     ];
